fix: removed white space from pic frame

--- a/src/App.scss
+++ b/src/App.scss
@@ -145,7 +145,7 @@
   float: left;
   margin-right: 10px;
   border-radius: 10px;
-  height:12.6em;
+  height:12.55em;
   width: 15.1em;
 }
 
